# nes-rs

./: .gitignore  Cargo.toml
src/: apu.rs  bus.rs  cartridge.rs  cpu.rs  interrupt.rs  joypad.rs  lib.rs  main.rs  opcodes.rs  ppu.rs  renderer.rs  show_tile.rs  sound_test.rs  trace.rs
src/apu/: registers.rs  sounds.rs
src/apu/registers/: noise.rs  pulse.rs  square.rs  triangle.rs
src/apu/sounds/: noise.rs  pulse.rs  square.rs  triangle.rs
src/ppu/: registers.rs
src/ppu/registers/: control.rs  mask.rs  status.rs
src/renderer/: frame.rs  palette.rs
