[package]
name = "nes-rs"
version = "0.1.0"
edition = "2021"
default-run = "nes-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
sdl2 = "0.34.0"
rand = "=0.7.3"
bitflags = "1.3.2"
cpal = "0.15.2"

[[bin]]
name = "sound_test"
path = "src/sound_test.rs"
